--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "pre-publish": "babel src --out-dir lib",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/setup.js test/ --compilers js:babel/register --recursive"
   },
   "repository": {
     "type": "git",
@@ -27,6 +27,15 @@
   },
   "homepage": "https://github.com/relekang/chai-have-xpath#readme",
   "devDependencies": {
-    "babel": "^5.8.23"
+    "babel": "^5.8.23",
+    "babel-eslint": "^4.1.3",
+    "chai": "^3.3.0",
+    "eslint": "^1.5.1",
+    "eslint-config-airbnb": "0.0.8",
+    "eslint-config-frigg": "frigg/eslint-config-frigg",
+    "eslint-plugin-react": "^3.4.2",
+    "jsdom": "^6.5.1",
+    "mocha": "^2.3.3",
+    "react": "^0.13.3"
   }
 }
