--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-config-frigg": "frigg/eslint-config-frigg",
     "eslint-plugin-react": "^3.4.2",
     "jsdom": "^6.5.1",
+    "lodash": "^3.10.1",
     "mocha": "^2.3.3",
     "react": "^0.13.3",
     "semantic-release": "^4.3.5"
