--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "lib/index.js",
   "scripts": {
     "pre-publish": "babel src --out-dir lib",
+    "prepublish": "babel src --out-dir lib",
     "test": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
