--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "pre-publish": "babel src --out-dir lib",
     "prepublish": "babel src --out-dir lib",
-    "postinstall": "babel src --out-dir lib",
+    "postinstall": "test -d lib || babel src --out-dir lib",
     "test": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
