--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chai-have-xpath",
-  "version": "0.0.0-semantic-release",
+  "version": "1.1.8",
   "description": "expect(element).to.have.xpath('//blink')",
   "main": "lib/index.js",
   "scripts": {
