fix: Eliminate Window/Global Merge, Reducing Global Clutter
Tests currently depend on merging window properties into the global namespace. This fix minimizes that by only including navigator in the global namespace. Other fixes include:

* Checking `globals.XPathResult` explicitly.
* Testing against babel-generated code and tests, to ensure that the babel-runtime does not play a role in the test results.
* Correct react-addons-test-utils import to match how that's done in the latest version of React.
* Update README.md with updated react imports and ES6 block-scoped variables.
* Organization work in the NPM scripts.
* Add `npm watch` task.
* Ignoring .idea/ directory, used by WebStorm.
* Add linting to the `npm test` task to simplify build.

--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "expect(element).to.have.xpath('//blink')",
   "main": "lib/index.js",
   "scripts": {
-    "prepublish": "babel src --out-dir lib",
-    "test": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
+    "prepublish": "npm run babel",
+    "babel": "npm-run-all --parallel babel:*",
+    "babel:src": "babel src --out-dir lib",
+    "babel:test": "babel test --out-dir libtest",
+    "mocha": "mocha libtest/setup.js libtest/ --recursive",
     "lint": "eslint .",
+    "test": "npm-run-all lint prepublish mocha",
+    "watch": "npm-run-all --parallel watch:*",
+    "watch:mocha": "mocha libtest/setup.js libtest/ --recursive --watch",
+    "watch:lint": "esw . -w",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -34,10 +41,13 @@
     "eslint-config-airbnb": "1.0.0",
     "eslint-config-frigg": "frigg/eslint-config-frigg",
     "eslint-plugin-react": "^3.4.2",
+    "eslint-watch": "^2.1.3",
     "jsdom": "^7.0.2",
     "lodash": "^3.10.1",
     "mocha": "^2.3.3",
-    "react": "^0.14.0",
+    "npm-run-all": "^1.2.13",
+    "react": "^0.14.2",
+    "react-addons-test-utils": "^0.14.2",
     "semantic-release": "^4.3.5"
   },
   "dependencies": {
