--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ coverage
 
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
+.idea
 
 # node-waf configuration
 .lock-wscript
@@ -25,4 +26,5 @@ build/Release
 # Dependency directory
 # https://www.npmjs.org/doc/misc/npm-faq.html#should-i-check-my-node_modules-folder-into-git
 node_modules
-lib
+lib/
+libtest/
