--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
     "prepublish": "npm run babel",
     "babel": "npm-run-all --parallel babel:*",
     "babel:src": "babel src --out-dir lib",
-    "babel:test": "babel test --out-dir libtest",
-    "mocha": "mocha libtest/setup.js libtest/ --recursive",
+    "mocha": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
     "lint": "eslint .",
     "test": "npm-run-all lint prepublish mocha",
     "watch": "npm-run-all --parallel watch:*",
-    "watch:mocha": "mocha libtest/setup.js libtest/ --recursive --watch",
+    "watch:mocha": "mocha test/setup.js test/ --compilers js:babel/register --recursive --watch",
     "watch:lint": "esw . -w",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
