fix: Seperating the 'lint' Task from the 'test' Task

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "babel:src": "babel src --out-dir lib",
     "mocha": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
     "lint": "eslint .",
-    "test": "npm-run-all lint prepublish mocha",
+    "test": "npm-run-all prepublish mocha",
+    "ci": "npm-run-all lint test",
     "watch": "npm-run-all --parallel watch:*",
     "watch:mocha": "mocha test/setup.js test/ --compilers js:babel/register --recursive --watch",
     "watch:lint": "esw . -w",
