--- a/package.json
+++ b/package.json
@@ -37,10 +37,8 @@
     "jsdom": "^7.0.2",
     "lodash": "^3.10.1",
     "mocha": "^2.3.3",
-    "react": "^0.14.0",
+    "react": ">=0.13.0",
     "semantic-release": "^4.3.5"
   },
-  "dependencies": {
-    "react-dom": "^0.14.1"
-  }
+  "dependencies": {}
 }
