--- a/.frigg.yml
+++ b/.frigg.yml
@@ -2,6 +2,7 @@ setup_tasks:
  - npm install
 
 tasks:
+ - npm uninstall react-dom
  - npm install react@0.13 && npm test
  - npm install react@latest react-dom@latest && npm test
  - npm run lint
