fix: Update the Build to Run 0.13.x and 0.14.x Tests

--- a/.frigg.yml
+++ b/.frigg.yml
@@ -2,7 +2,8 @@ setup_tasks:
  - npm install
 
 tasks:
- - npm uninstall react-dom
+ - npm run lint
+ - npm test
+ - npm uninstall react-dom react-addons-test-utils
  - npm install react@0.13 && npm test
- - npm install react@latest react-dom@latest && npm test
  - npm run lint
