chore: Add logging of react version in test setup

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "prepublish": "npm run babel",
     "babel": "npm-run-all --parallel babel:*",
     "babel:src": "babel src --out-dir lib",
-    "mocha": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
+    "test": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
     "lint": "eslint .",
-    "test": "npm-run-all prepublish mocha",
     "watch": "npm-run-all --parallel watch:*",
     "watch:mocha": "mocha test/setup.js test/ --compilers js:babel/register --recursive --watch",
     "watch:lint": "esw . -w",
