--- a/package.json
+++ b/package.json
@@ -4,14 +4,9 @@
   "description": "expect(element).to.have.xpath('//blink')",
   "main": "lib/index.js",
   "scripts": {
-    "prepublish": "npm run babel",
-    "babel": "npm-run-all --parallel babel:*",
-    "babel:src": "babel src --out-dir lib",
+    "prepublish": "babel src --out-dir lib",
     "test": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
     "lint": "eslint .",
-    "watch": "npm-run-all --parallel watch:*",
-    "watch:mocha": "mocha test/setup.js test/ --compilers js:babel/register --recursive --watch",
-    "watch:lint": "esw . -w",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
@@ -27,28 +22,24 @@
   "bugs": {
     "url": "https://github.com/relekang/chai-have-xpath/issues"
   },
-  "eslintConfig": {
-    "extends": "frigg"
-  },
   "homepage": "https://github.com/relekang/chai-have-xpath#readme",
   "devDependencies": {
-    "babel": "^5.8.23",
-    "babel-eslint": "^4.1.3",
-    "chai": "^3.3.0",
-    "eslint": "^1.5.1",
-    "eslint-config-airbnb": "1.0.2",
-    "eslint-config-frigg": "frigg/eslint-config-frigg",
-    "eslint-plugin-react": "^3.4.2",
-    "eslint-watch": "^2.1.3",
-    "jsdom": "^7.0.2",
-    "lodash": "^3.10.1",
-    "mocha": "^2.3.3",
-    "npm-run-all": "^1.2.13",
-    "react": "^0.14.2",
-    "react-addons-test-utils": "^0.14.2",
-    "semantic-release": "^4.3.5"
+    "babel-cli": "^6.6.5",
+    "babel-eslint": "6.0.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "chai": "3.5.0",
+    "eslint": "2.5.3",
+    "eslint-config-airbnb": "6.2.0",
+    "eslint-plugin-react": "4.2.3",
+    "jsdom": "8.2.0",
+    "lodash": "4.7.0",
+    "mocha": "2.4.5",
+    "react": "0.14.8",
+    "react-addons-test-utils": "0.14.8",
+    "semantic-release": "4.3.5"
   },
   "dependencies": {
-    "have-xpath": "1.0.0"
+    "have-xpath": "1.0.1"
   }
 }
