--- a/package.json
+++ b/package.json
@@ -24,23 +24,23 @@
   },
   "homepage": "https://github.com/relekang/chai-have-xpath#readme",
   "devDependencies": {
-    "babel-cli": "^6.7.5",
-    "babel-eslint": "^6.0.2",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-cli": "6.7.5",
+    "babel-eslint": "6.0.2",
+    "babel-preset-es2015": "6.6.0",
+    "babel-preset-react": "6.5.0",
     "chai": "3.5.0",
-    "eslint": "^2.7.0",
-    "eslint-config-airbnb": "^7.0.0",
-    "eslint-plugin-jsx-a11y": "^0.6.2",
-    "eslint-plugin-react": "^4.3.0",
-    "jsdom": "^8.3.1",
-    "lodash": "^4.11.0",
+    "eslint": "2.7.0",
+    "eslint-config-airbnb": "7.0.0",
+    "eslint-plugin-jsx-a11y": "0.6.2",
+    "eslint-plugin-react": "4.3.0",
+    "jsdom": "8.3.1",
+    "lodash": "4.11.0",
     "mocha": "2.4.5",
-    "react": "^15.0.1",
-    "react-addons-test-utils": "^15.0.1",
+    "react": "15.0.1",
+    "react-addons-test-utils": "15.0.1",
     "semantic-release": "4.3.5"
   },
   "dependencies": {
-    "have-xpath": "^1.0.3"
+    "have-xpath": "1.0.3"
   }
 }
