--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "scripts": {
     "prepublish": "babel src --out-dir lib",
-    "test": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
+    "test": "mocha test/setup.js test/ --compilers js:babel-core/register --recursive",
     "lint": "eslint .",
     "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
@@ -25,6 +25,7 @@
   "homepage": "https://github.com/relekang/chai-have-xpath#readme",
   "devDependencies": {
     "babel-cli": "6.7.5",
+    "babel-core": "6.7.6",
     "babel-eslint": "6.0.2",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-react": "6.5.0",
