--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "chai-have-xpath",
   "description": "expect(element).to.have.xpath('//blink')",
   "main": "lib/index.js",
+  "version": "1.1.8",
   "scripts": {
     "prepublish": "babel src --out-dir lib",
     "test": "mocha test/setup.js test/ --compilers js:babel/register --recursive",
