--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pretty": "1.0.0",
     "react": "15.0.1",
     "react-addons-test-utils": "15.0.1",
+    "react-dom": "15.1.0",
     "semantic-release": "4.3.5"
   },
   "dependencies": {
